# event-driven-rag

./: .gitignore  CLAUDE.md  Makefile  compose.yaml
apps/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/backend/app/: auth.py  dependencies.py  ingest_handler.py  ingest_queue.py  logger.py  main.py  schemas.py  settings.py  storage.py
apps/backend/app/repositories/: chats.py  documents.py  users.py
apps/backend/app/routers/: chats.py  documents.py  users.py
apps/backend/tests/: conftest.py  factories.py  test_auth.py  test_chat_repository.py  test_chats_api.py  test_document_repository.py  test_documents_api.py  test_health.py  test_users_api.py
apps/frontend/: .env.example  .gitignore  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx  vite-env.d.ts
apps/frontend/src/api/: client.ts
apps/frontend/src/auth/: RequireAuth.tsx  userManager.ts
apps/frontend/src/pages/: AuthCallback.tsx  Home.tsx
cdk/: .gitignore  cdk.json  package-lock.json  package.json
cdk/lib/: app-stack.ts  data-stack.ts
cdk/test/: app-stack.test.ts  data-stack.test.ts
cdk/test/__snapshots__/: app-stack.test.ts.snap  data-stack.test.ts.snap
docs/: architecture.md
docs/diagrams/: event_driven_rag.py
