[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.7.0",
    "boto3>=1.43.51",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.32",
    "python-ulid>=3.0.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "moto[dynamodb,s3,sqs]>=5.2.2",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
# ingest-fn(Dockerfileのworkerターゲット)専用。ネイティブ開発環境には入れない
worker = [
    "awslambdaric>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
